Upload quanteda examples

--- a/W1-Introduction/Introduction-to-Python-with-Examples.ipynb
+++ b/W1-Introduction/Introduction-to-Python-with-Examples.ipynb
@@ -4985,19 +4985,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Jenny A. Durkan', 'M. Lorena González', 'Lisa Herbold', 'Debora Juarez', 'Andrew J. Lewis', 'Tammy J. Morales', 'Teresa Mosqueda', 'Alex Pedersen', 'Kshama Sawant', 'Dan Strauss', 'Pete Holmes', 'Edward McKenna', 'Faye Chess', 'Andrea Chin', 'Anita Crawford-Willis', 'Adam Eisenberg', 'Willie J. Gregory', 'Damon Shadid', 'Court']\n",
-      "[]\n",
-      "[' Mayor', ' Council President', ' Councilmember', ' Councilmember', ' Councilmember', ' Councilmember', ' Councilmember', ' Councilmember', ' Councilmember', ' Councilmember', ' City Attorney', ' Presiding Judge', ' Judge', ' Judge', ' Judge', ' Judge', ' Judge', ' Judge', ' Seattle Municipal']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests \n",
     "from bs4 import BeautifulSoup\n",
@@ -5005,32 +4995,45 @@
     "# collect and parse the page \n",
     "r = requests.get(\"https://www.seattle.gov/elected-officials\")\n",
     "soup = BeautifulSoup(r.text, 'html.parser')\n",
-    "name_list = soup.find_all('div', class_ = 'primaryContent')\n",
-    "name_list\n",
+    "boxes = soup.find_all('div', class_ = 'primaryContent')\n",
     "\n",
-    "name_item = []\n",
-    "position_item = []\n",
-    "\n",
-    "for name in name_list:\n",
-    "    if name.find('h3'):\n",
-    "        name_item.append(name.find('h3').text)\n",
-    "print(name_item)\n",
-    "print(position_item)\n",
-    "\n",
-    "# delete the last one \"court\"\n",
-    "del name_item[-1]\n",
-    "name_item\n",
-    "\n",
-    "for position in name_list:\n",
-    "    if position.find('span'):\n",
-    "        position_item.append(position.find('span').text)\n",
-    "print(position_item)\n",
-    "del position_item[-1]\n",
-    "position_item\n",
-    "\n",
+    "name_item = [box.h3.text for box in boxes]\n",
+    "position_item = [box.span.text for box in boxes]\n",
+    "    \n",
     "# for better presentation \n",
     "import pandas\n",
     "pandas.DataFrame({'position':position_item, 'name':name_item}).to_csv('seattle_officials.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Practice: retrieve the timeline of US-Iran relations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "r = requests.get('http://pri.org/stories/2020-01-03/history-us-iran-relations-timeline')\n",
+    "\n",
+    "from bs4 import BeautifulSoup\n",
+    "soup = BeautifulSoup(r.text, 'html.parser')\n",
+    "\n",
+    "header_tags = soup.find_all('h3')\n",
+    "headers = [h.text.strip() for h in header_tags]\n",
+    "\n",
+    "dates = [header.split(': ')[0] for header in headers]\n",
+    "events = [header.split(': ')[1] for header in headers]\n",
+    "descriptions = [h.next_sibling.text.strip() for h in header_tags]\n",
+    "\n",
+    "import pandas\n",
+    "pandas.DataFrame({'date':dates, 'event': events, 'description':descriptions}).to_csv('iran_history.csv', index = False, sep = ',')"
    ]
   },
   {
