Upload example project with R

--- a/W1-Introduction/Example Project with Python.ipynb
+++ b/W1-Introduction/Example Project with Python.ipynb
@@ -450,7 +450,7 @@
     "               random_state=40).generate_from_frequencies(FreqDist(tokens_own))\n",
     "pt.imshow(wc)\n",
     "pt.axis(\"off\")\n",
-    "wc.to_file('img/trump_=wordcloud.jpg')\n",
+    "wc.to_file('img/trump_wordcloud.jpg')\n",
     "# it looks like he uses pretty simple language and the words he often uses include \"great\", \"thank\", \"people\",\"america\"..."
    ]
   },
