--- a/W1-Introduction/Introduction-to-NLP-with-Quanteda (1).Rmd
+++ b/W1-Introduction/Introduction-to-NLP-with-Quanteda (1).Rmd
@@ -1,17 +1,25 @@
 ---
 title: "Introduction-to-NLP-with-Quanteda"
-output: html_notebook
+output:
+  html_document:
+    df_print: paged
+  html_notebook: default
+  pdf_document: default
+  editor_options:
+  chunk_output_type: inline
 ---
 
 ```{r message=FALSE}
 library(quanteda)
-library(rvest)
 library(readtext)
 library(ggplot2)
+library(rvest)
 ```
 
 # Basic R commands 
 ## Data types 
+
+
 ```{r}
 x <- 2
 class(x) # numeric: either double or integer
@@ -47,10 +55,10 @@ vec_char2
 names(vec_num) <- vec_char  #assign names to numbers
 vec_num
 
-vec_gt5 <- vec_num >= 5  #is the value greater than 5
+vec_gt5 <- vec_num >= 5  #is the value greater than 5?
 vec_gt5
 
-vec_textmatch <- vec_char == 'apple'  #does the text match
+vec_textmatch <- vec_char == 'apple'  #does the text match?
 vec_textmatch
 ```
 
@@ -66,8 +74,6 @@ dat_fruit_sub
 dat_fruit_sub2 <- subset(dat_fruit, name == 'apple') #by name
 dat_fruit_sub2
 ```
-
-
 
 ```{r}
 mat <- matrix(c(1, 3, 6, 8, 3, 5, 2, 7), nrow = 4)
@@ -87,8 +93,8 @@ rowSums(mat)
 colSums(mat)
 ```
 
-# Processing textual data
-## When working with textual data strings, it is recommended to turn R’s automatic conversion of strings into factors off.
+# Converting documents to usable textual data (pre-processing)
+## When working with textual data strings, first turn off R’s automatic conversion of strings to factors.
 ```{r}
 # Global options
 options(stringsAsFactors = FALSE)
@@ -96,6 +102,8 @@ getwd()
 # setwd("your path")
 ```
 
+
+## Get some text
 ```{r}
 file_path <- "https://raw.githubusercontent.com/kbenoit/readtext/master/inst/extdata/csv/inaugCorpus.csv"
 file_text <- readtext(file_path, text_field = "texts")
@@ -103,50 +111,59 @@ file_text
 ```
 
 ```{r message=F}
-# COnstruct a corpus, which is an extension of R list objects 
+
+# Construct a corpus from the text - a corpus is an extension of an R list object. #Very important in Quanteda
+
 corp <- corpus(file_text)
 summary(corp)
 
-# For a more meaningful identifier 
+# Reorder identifiers
 docid <- paste(file_text$Year, 
                file_text$FirstName, 
                file_text$President, sep = " ")
 docnames(corp) <- docid
 summary(corp)
 
-texts(corp[1])
-cat(texts(corp[1])) # cat() will help to produce correct line breaks
+texts(corp[1]) #look at first document
+cat(texts(corp[1])) # cat() will help to produce correct line breaks in document
 ```
 
-## Familarizing with text statistics
+# Creating and summarizing a Document Term Matrix
 ```{r message=FALSE, warning=FALSE}
-# To analyze which word forms the content, we need to tokenize the texts, which means all the words in the texts need to be identified and separated. A word form is also called "type"; the occurence of a type in a text is a "token"
+
+## Words are not initially recognizable and must first be tokenized (distinguished using the spaces between them). A word form is also called "type"; the occurrence of a type in a text is a "token"
+
 tokens <- tokens(corp,remove_numbers=TRUE,remove_punct=TRUE,remove_symbols=TRUE,remove_separators=TRUE)
 tokens <- tokens_remove(tokens, pattern = stopwords("en"))
 
-# Create document-term matrix (DTM)
-dtm <- dfm(tokens)
-dim(dtm) # 5 rows and 1826 columns, meaning 5 documents in the corpus and 1826 word forms/types of the vocabulary after removing some meaningless stuff
+## The next step for many projects is to create a document-term matrix (DTM) where each row is a document and each column is a token/word. The values of each cell indicate whether the word is present in that document (0,1) or the number of times it is present (example below). Although not done here, it is common to first reduce the size of the matrix by first removing common 'stopwords' (the, and); stemming words (removing their suffixes so that fishing is collapsed to fish etc); and eliminating extremely rare words. Why? To speed up computing time. But be thoughtful because these practices can have substantive consequences depending on the project.
 
-# Sum columns for word counts
+# Create document-term matrix (DTM) 
+dtm <- dfm(tokens)
+dim(dtm) # 5 rows (documents, sentences, etc) and 1826 columns (word forms/types) 
+
+## DTMs are used for lots of things (e.g. topic modeling). Below are some simpler analyses.
+
+# Total word counts
 freqs <- colSums(dtm)
 
-# Get vocabulary vector
+# Vocabulary vector 
 words <- colnames(dtm)
 
-# Combine words and their frequencies in a data frame
+# Make new dataframe of words and their frequencies
 wordlist <- data.frame(words, freqs)
 
-# reorder the wordlist by decreasing frequency
+# Order words by the frequencies
 word_indexes <- order(wordlist[, "freqs"], decreasing = TRUE)
 wordlist <- wordlist[word_indexes, ]
-
 head(wordlist)
-textplot_wordcloud(dtm)
+
+#create a wordcloud where the size of the word reflects its frequency
+textplot_wordcloud(dtm) 
 ```
 
-
 # Web crawling and scraping 
+
 ## Scrape a series of documents
 * Download and parse the tag overview page to extract all links to articles of interest
 * Download and scrape each individual article page
@@ -174,7 +191,6 @@ all_links <- NULL
 for (url in paging_urls) {
 # download and parse single ta overview page
         html_document <- read_html(url)
-
 # extract links to articles
         links <- html_document %>%
                 html_nodes(xpath = "//div[contains(@class, 'fc-item__container')]/a") %>%
@@ -183,6 +199,7 @@ for (url in paging_urls) {
         all_links <- c(all_links, links)
 }
 ```
+
 
 ```{r}
 scrape_guardian_article <- function(url) {
@@ -236,7 +253,7 @@ for (i in 1:length(all_links)) {
 head(all_articles, 3)
 
 # Write articles to disk
-write.csv2(all_articles, file = "guardian_merkel.csv")
+write.csv2(all_articles, file = "data/guardian_merkel.csv")  #need to set the correct path obviously
 ```
 
 **More resources on quanteda:**
