suggested correction for tuples chunk
I have corrected the bug and add a new line which shows that tuple are not changeable. It tries to change an item of tuple and it generates and error. I hope that helps.

--- a/W1-Introduction/Introduction-to-Python-with-Examples.ipynb
+++ b/W1-Introduction/Introduction-to-Python-with-Examples.ipynb
@@ -78,10 +78,12 @@
    "source": [
     "#Tuples are immutable ()\n",
     "\n",
-    "tuple_example = (12, \"hungry\", \"dogs\") # note the difference between () and []\n",
-    "len(tuple_example)\n",
-    "type(tuple_example) # tuple \n",
-    "print(tuple_example(2)) # the error says the tuple object is not callable; tuple is immutable while list is mutable "
+     "tuple_example = (12, "hungry", "dogs") # note the difference between () and []"
+     "len(tuple_example)"
+     "type(tuple_example) # tuple" 
+     "print(tuple_example[2]) # indexing tuples is done with brackets too."
+     "tuple_example[2] = "cats" # the error says tuple object does not support item assignment;" 
+     "                          # tuple is immutable while list is mutable" 
    ]
   },
   {
